Image Texture 'Auto Refresh' Does not refresh on frame change. #32796

Closed
opened 2012-10-06 19:41:57 +02:00 by Joel Godin · 4 comments

%%%Cycles Nodes.

Add Plane,
Add material (use nodes).
Texture Coordinates > Mapping > Image Texture > Diffuse BSDF > Material.

Set Image Texture Node to Color>Flat>Image Sequence>Frames (4 in this example)> Cyclic (checked or not checked) > Auto Refresh checked.
Load Image Sequence (attached 4 image sequences 1,2,3,4).
Advance frame from 1 to 2 (for example)
Viewport rendering does not auto refresh on frame change. Only refreshes on parameter change.
(i.e. go into mapping parameter and come out, it refreshes).

iMac 10.7.5
2.7 GHz Intel Core i5
AMD Radeon HD 6770M 512M
Blender 2.64 r51026M

Thanks%%%

%%%Cycles Nodes. Add Plane, Add material (use nodes). Texture Coordinates > Mapping > Image Texture > Diffuse BSDF > Material. Set Image Texture Node to Color>Flat>Image Sequence>Frames (4 in this example)> Cyclic (checked or not checked) > Auto Refresh checked. Load Image Sequence (attached 4 image sequences 1,2,3,4). Advance frame from 1 to 2 (for example) Viewport rendering does not auto refresh on frame change. Only refreshes on parameter change. (i.e. go into mapping parameter and come out, it refreshes). iMac 10.7.5 2.7 GHz Intel Core i5 AMD Radeon HD 6770M 512M Blender 2.64 r51026M Thanks%%%
Author

Changed status to: 'Open'

Changed status to: 'Open'

%%%Seems missing re-render tag.

Brecht, should be simple for you perhaps?%%%

%%%Seems missing re-render tag. Brecht, should be simple for you perhaps?%%%

%%%Fix in svn, thanks for the report.%%%

%%%Fix in svn, thanks for the report.%%%

Changed status from 'Open' to: 'Resolved'

Changed status from 'Open' to: 'Resolved'
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
3 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#32796
No description provided.