Fix #32796: cycles did not support image auto refresh option.